Fixed spacing around header line

--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -45,8 +45,8 @@
 
 .line
     border-top: 1px solid $epsilon
-    padding: 10px 0
-    margin: 40px 0 0
+    padding: 13px 0
+    margin: 43px 0 0
     font-size: 1.3rem
     color: $gama
     font-weight: 300
